--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -754,7 +754,20 @@
     "\n",
     "Then, we will need to log in to the Hugging Face Hub to access the MCP servers. You can do this with the `huggingface-cli` command line tool. You will need a [login token](https://huggingface.co/docs/huggingface_hub/v0.32.3/en/quick-start#authentication) to do this.\n",
     "\n",
-    "```huggingface-cli login```"
+    "```huggingface-cli login```\n",
+    "\n",
+    "**Configure Access Token Permissions**\n",
+    "\n",
+    "After creating your Hugging Face access token and logging in, you need to ensure your token has the proper permissions to work with inference providers.\n",
+    "\n",
+    "1. Go to your [Hugging Face Access Tokens page](https://huggingface.co/settings/tokens)\n",
+    "1. Find your MCP token and click the three dots (⋮) next to it\n",
+    "1. Select “Edit permissions”\n",
+    "1. Under the Inference section, check the box for:\n",
+    "* “Make calls to Inference Providers”\n",
+    "1. Save your changes\n",
+    "\n",
+    "This permission is required because tiny agents need to make API calls to hosted models like `Qwen/Qwen2.5-72B-Instruct` through providers like Nebius."
    ]
   }
  ],
