--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -767,7 +767,45 @@
     "* “Make calls to Inference Providers”\n",
     "1. Save your changes\n",
     "\n",
-    "This permission is required because tiny agents need to make API calls to hosted models like `Qwen/Qwen2.5-72B-Instruct` through providers like Nebius."
+    "This permission is required because tiny agents need to make API calls to hosted models like `Qwen/Qwen2.5-72B-Instruct` through providers like Nebius.\n",
+    "\n",
+    "## Connecting to MCP Servers\n",
+    "\n",
+    "Now, let's create an agent congfiguration file `agent.json`. You can find this file somewhere else (figure it out you fool).\n",
+    "\n",
+    "Now you can run the agent:\n",
+    "\n",
+    "```tiny-agents run agent.json```\n",
+    "\n",
+    "In the [this video](), we run the agent and ask it to open a new tab in the browser.\n",
+    "\n",
+    "(Seems they messed up with the documentation. I can't find the video anywhere.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98a7134e",
+   "metadata": {},
+   "source": [
+    "# Hugging Face MCP Server\n",
+    "\n",
+    "The Hugging Face MCP Server connects your MCP-compatible AI assistant (for example VS Code, Cursor, Zed, or Claude Desktop) directly to the Hugging Face Hub. Once connected, your assistant can search and explore Hub resources and use community tools, all from within your editor, chat, or CLI.\n",
+    "\n",
+    "**What you can do**\n",
+    "\n",
+    "* Search and explore Hub resources: models, datasets, Spaces, and papers.\n",
+    "* Run community tools via MCP‑compatible Gradio apps hosted on Spaces.\n",
+    "* Bring results back into your assistant with metadata, links, and context.\n",
+    "\n",
+    "**Built-in tools**\n",
+    "\n",
+    "The server provides curated tools that work across supported clients:\n",
+    "\n",
+    "* Models search and exploration (filter by task, library, downloads, likes)\n",
+    "* Datasets search and exploration (filter by tags, size, modality)\n",
+    "* Spaces semantic search (find apps by capability, e.g., TTS, ASR, OCR)\n",
+    "* Papers semantic search (discover relevant research on the Hub)\n",
+    "\n"
    ]
   }
  ],
