Notes and installed gradio

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -805,6 +805,39 @@
     "* Datasets search and exploration (filter by tags, size, modality)\n",
     "* Spaces semantic search (find apps by capability, e.g., TTS, ASR, OCR)\n",
     "* Papers semantic search (discover relevant research on the Hub)\n",
+    "\n",
+    "**Get started**\n",
+    "\n",
+    "1. Open your MCP settings: visit https://huggingface.co/settings/mcp while logged in.\n",
+    "1. Pick your client: select your MCP‑compatible client (for example VS Code, Cursor, Zed, Claude Desktop). The page shows client‑specific instructions and a ready‑to‑copy configuration snippet.\n",
+    "1. Paste and restart: copy the snippet into your client’s MCP configuration, save, and restart/reload the client. You should see “Hugging Face” (or similar) listed as a connected MCP server in your client.\n",
+    "\n",
+    "**Using the server**\n",
+    "\n",
+    "After connecting, ask your assistance to use the Hugging Face tools.\n",
+    "\n",
+    "Your assistant will call MCP tools exposed by the Hugging Face MCP Server. You can then open the resource on the Hub or continue iterating in the same chat."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e83289a",
+   "metadata": {},
+   "source": [
+    "# Gradio MCP Integration\n",
+    "\n",
+    "Gradio is a popular Python library for quickly creating customizable web interfaces for machine learning models.\n",
+    "\n",
+    "## Introduction to Gradio\n",
+    "\n",
+    "Gradio allows developers to create UIs for their models with just a few lines of Python code. It’s particularly useful for:\n",
+    "* Creating demos and prototypes\n",
+    "* Sharing models with non-technical users\n",
+    "* Testing and debugging model behavior\n",
+    "\n",
+    "With the addition of MCP support, Gradio now offers a straightforward way to expose AI model capabilities through the standardized MCP protocol.\n",
+    "\n",
+    "Combining Gradio with MCP allows you to create both human-friendly interfaces and AI-accessible tools with minimal code. But best of all, Gradio is already well-used by the AI community, so you can use it to share your MCP Servers with others.\n",
     "\n"
    ]
   }
