--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -838,8 +838,93 @@
     "With the addition of MCP support, Gradio now offers a straightforward way to expose AI model capabilities through the standardized MCP protocol.\n",
     "\n",
     "Combining Gradio with MCP allows you to create both human-friendly interfaces and AI-accessible tools with minimal code. But best of all, Gradio is already well-used by the AI community, so you can use it to share your MCP Servers with others.\n",
-    "\n"
+    "\n",
+    "You’ll also need an LLM application that supports tool calling using the MCP protocol, such as Cursor ( known as “MCP Hosts”).\n",
+    "\n",
+    "# Creating an MCP Server with Gradio\n",
+    "\n",
+    "Let’s walk through a basic example of creating an MCP Server using Gradio:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "759443bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/christiancamp/Desktop/hugging-face-notes/hugging-env/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n",
+      "\n",
+      "🔨 Launching MCP server:\n",
+      "** Streamable HTTP URL: http://127.0.0.1:7860/gradio_api/mcp/\n",
+      "* [Deprecated] SSE URL: http://127.0.0.1:7860/gradio_api/mcp/sse\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "def letter_counter(word: str, letter: str) -> int:\n",
+    "    \"\"\"\n",
+    "    Count the number of occurrences of a letter in a word or text.\n",
+    "\n",
+    "    Args:\n",
+    "        word (str): The input text to search through\n",
+    "        letter (str): The letter to search for\n",
+    "\n",
+    "    Returns:\n",
+    "        int: The number of times the letter appears in the text\n",
+    "    \"\"\"\n",
+    "    word = word.lower()\n",
+    "    letter = letter.lower()\n",
+    "    count = word.count(letter)\n",
+    "    return count\n",
+    "\n",
+    "# Create a standard Gradio interface\n",
+    "demo = gr.Interface(\n",
+    "    fn=letter_counter,\n",
+    "    inputs=[\"textbox\", \"textbox\"],\n",
+    "    outputs=\"number\",\n",
+    "    title=\"Letter Counter\",\n",
+    "    description=\"Enter text and a letter to count how many times the letter appears in the text.\"\n",
+    ")\n",
+    "\n",
+    "# Launch both the Gradio web interface and the MCP server\n",
+    "if __name__ == \"__main__\":\n",
+    "    demo.launch(mcp_server=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6819e0ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
