--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1086,7 +1086,13 @@
    "source": [
     "# Building and End-to-End MCP Application\n",
     "\n",
-    "In this unit, we’ll build a complete MCP application from scratch, focusing on creating a server with Gradio and connecting it with multiple clients. This hands-on approach will give you practical experience with the entire MCP ecosystem."
+    "In this unit, we’ll build a complete MCP application from scratch, focusing on creating a server with Gradio and connecting it with multiple clients. This hands-on approach will give you practical experience with the entire MCP ecosystem.\n",
+    "\n",
+    "## Our End-to-End Project\n",
+    "\n",
+    "We'll build a sentiment analysis application that consists of three main parts: the server, the client, and the deployment.\n",
+    "\n",
+    "![Alt image](images/e2e_project.png)"
    ]
   }
  ],
