--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1092,7 +1092,23 @@
     "\n",
     "We'll build a sentiment analysis application that consists of three main parts: the server, the client, and the deployment.\n",
     "\n",
-    "![Alt image](images/e2e_project.png)"
+    "![Alt image](images/e2e_project.png)\n",
+    "\n",
+    "**Server Side**\n",
+    "* Uses Gradio to create a web interface and MCP server via `gr.Interface`\n",
+    "* Implements a sentiment analysis tool using TextBlob\n",
+    "* Exposes the tool through both HTTP and MCP protocols\n",
+    "\n",
+    "**Client Side**\n",
+    "* Implements a HuggingFace.js client\n",
+    "* Or, creates a smolagents Python client\n",
+    "* Demonstrates how to use the same server with different client implementations\n",
+    "\n",
+    "**Deployment**\n",
+    "* Deploys the server to Hugging Face Spaces\n",
+    "* Configures the clients to work with the deployed server\n",
+    "\n",
+    "Alright, let's get started."
    ]
   }
  ],
