--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1110,6 +1110,42 @@
     "\n",
     "Alright, let's get started."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71a1cef8",
+   "metadata": {},
+   "source": [
+    "# Building the Gradio MCP Server\n",
+    "\n",
+    "In this section, we’ll create our sentiment analysis MCP server using Gradio. This server will expose a sentiment analysis tool that can be used by both human users through a web interface and AI models through the MCP protocol.\n",
+    "\n",
+    "## Introduction to Gradio MCP Integration\n",
+    "\n",
+    "Gradio provides a straightforward way to create MCP servers by automatically converting your Python functions into MCP tools. When you set `mcp_server=True` in `launch()`, Gradio:\n",
+    "\n",
+    "1. Automatically converts your functions into MCP Tools\n",
+    "1. Maps input components to tool argument schemas\n",
+    "1. Determines response formats from output components\n",
+    "1. Sets up JSON-RPC over HTTP+SSE for client-server communication\n",
+    "1. Creates both a web interface and an MCP server endpoint\n",
+    "\n",
+    "## Setting Up the Project\n",
+    "\n",
+    "# Creating the Server\n",
+    "\n",
+    "**Hugging face spaces needs an app.py file to build the space. So the name of the python file has to be app.py**\n",
+    "\n",
+    "Create a new file called `app.py` with the following code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47303219",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
