Sentiment analysis example

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1141,11 +1141,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47303219",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n",
+      "\n",
+      "🔨 Launching MCP server:\n",
+      "** Streamable HTTP URL: http://127.0.0.1:7860/gradio_api/mcp/\n",
+      "* [Deprecated] SSE URL: http://127.0.0.1:7860/gradio_api/mcp/sse\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import gradio as gr\n",
+    "from textblob import TextBlob\n",
+    "\n",
+    "def sentiment_analysis(text: str) -> str:\n",
+    "    \"\"\"\n",
+    "    Analyze the sentiment of the given text.\n",
+    "\n",
+    "    Args:\n",
+    "        text (str): The text to analyze\n",
+    "    \n",
+    "    Returns:\n",
+    "    str: A JSON string containing polarity, subjectivity, and assessment\n",
+    "    \"\"\"\n",
+    "    blob = TextBlob(text)\n",
+    "    sentiment = blob.sentiment\n",
+    "\n",
+    "    result ={\n",
+    "        \"polarity\": round(sentiment.polarity, 2), # -1 (negative) to 1 (positive)\n",
+    "        \"subjectivity\": round(sentiment.subjectivity, 2), # 0 (objective) to 1 (subjective)\n",
+    "        \"assessment\": \"positive\" if sentiment.polarity > 0 else \"negative\" if sentiment.polarity < 0 else \"neutral\"\n",
+    "    }\n",
+    "\n",
+    "    return json.dumps(result)\n",
+    "\n",
+    "demo = gr.Interface(\n",
+    "    fn=sentiment_analysis,\n",
+    "    inputs=gr.Textbox(placeholder=\"Enter text to analyze...\"),\n",
+    "    outputs=gr.Textbox(),\n",
+    "    title=\"Text Sentiment Analysis\",\n",
+    "    description=\"Analyze the sentiment of text using TextBlob\"\n",
+    ")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    demo.launch(mcp_server=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c37d20b2",
+   "metadata": {},
+   "source": [
+    "There's then a section that explains the code, but it's pretty straightforward. I'll just read over it for now to see if there's anything surprising happening here."
+   ]
   }
  ],
  "metadata": {
