--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1213,7 +1213,35 @@
    "id": "c37d20b2",
    "metadata": {},
    "source": [
-    "There's then a section that explains the code, but it's pretty straightforward. I'll just read over it for now to see if there's anything surprising happening here."
+    "There's then a section that explains the code, but it's pretty straightforward. I'll just read over it for now to see if there's anything surprising happening here.\n",
+    "\n",
+    "Now start the server by running:\n",
+    "\n",
+    "```python app.py```\n",
+    "\n",
+    "You should see output indicating that both the web interface and MCP server are running. The web interface will be available at http://localhost:7860, and the MCP server at http://localhost:7860/gradio_api/mcp/sse.\n",
+    "\n",
+    "## Testing the Server\n",
+    "\n",
+    "You can test the server in two ways:\n",
+    "\n",
+    "1. **Web Interface:** \n",
+    "* Open `http://localhost:7860` in your browser\n",
+    "* Enter some text and hit \"Submit\"\n",
+    "* Poof there ya go.\n",
+    "\n",
+    "1. **MCP Schema:**\n",
+    "* Visit `http://localhost:7860/gradio_api/mcp/schema`\n",
+    "* This shows the MCP tool schema that clients will use\n",
+    "* You can also find this in the \"View API\" link in the footer of your Gradio app\n",
+    "\n",
+    "## Troubleshooting Tips\n",
+    "\n",
+    "1. Type Hints and Docstrings:\n",
+    "\n",
+    "Always provide type hints for your function parameters and return values\n",
+    "Include a docstring with an “Args:” block for each parameter\n",
+    "This helps Gradio generate accurate MCP tool schemas"
    ]
   }
  ],
