--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1238,10 +1238,14 @@
     "## Troubleshooting Tips\n",
     "\n",
     "1. Type Hints and Docstrings:\n",
+    "* Always provide type hints for your function parameters and return values\n",
+    "* Include a docstring with an “Args:” block for each parameter\n",
+    "* This helps Gradio generate accurate MCP tool schemas\n",
     "\n",
-    "Always provide type hints for your function parameters and return values\n",
-    "Include a docstring with an “Args:” block for each parameter\n",
-    "This helps Gradio generate accurate MCP tool schemas"
+    "2. String Inputs:\n",
+    "* When in doubt, accept input arguments as str\n",
+    "* Convert them to the desired type inside the function\n",
+    "* This provides better compatibility with MCP clients"
    ]
   }
  ],
