--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1245,7 +1245,63 @@
     "2. String Inputs:\n",
     "* When in doubt, accept input arguments as str\n",
     "* Convert them to the desired type inside the function\n",
-    "* This provides better compatibility with MCP clients"
+    "* This provides better compatibility with MCP clients\n",
+    "\n",
+    "3. SSE Support:\n",
+    "* Some MCP clients don’t support SSE-based MCP Servers\n",
+    "* In those cases, use mcp-remote\n",
+    "\n",
+    "## SSE Support:\n",
+    "* Some MCP clients don't support SSE-based MCP Servers\n",
+    "* In those cases, use `mcp-remote`:\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "  \"mcpServers\": {\n",
+    "    \"gradio\": {\n",
+    "      \"command\": \"npx\",\n",
+    "      \"args\": [\n",
+    "        \"mcp-remote\",\n",
+    "        \"http://localhost:7860/gradio_api/mcp/sse\"\n",
+    "      ]\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "## Deploying to Hugging Face Spaces\n",
+    "\n",
+    "1. Create a new Space on Hugging Face:\n",
+    "* Go to huggingface.co/spaces\n",
+    "* Click “New Space”\n",
+    "* Name your space (e.g., “mcp-sentiment”)\n",
+    "* Choose “Gradio” as the SDK\n",
+    "* Click “Create Space”\n",
+    "\n",
+    "2. Create a `requirements.txt` file:\n",
+    "\n",
+    "```\n",
+    "gradio[mcp]\n",
+    "textblob\n",
+    "```\n",
+    "\n",
+    "3. Push your code to the Space:\n",
+    "\n",
+    "```\n",
+    "git init\n",
+    "git add app.py requirements.txt\n",
+    "git commit -m \"Initial commit\"\n",
+    "git remote add origin https://huggingface.co/spaces/YOUR_USERNAME/mcp-sentiment\n",
+    "git push -u origin main\n",
+    "```\n",
+    "\n",
+    "Your MCP server will now be available at:\n",
+    "\n",
+    "`https://YOUR_USERNAME-mcp-sentiment.hf.space/gradio_api/mcp/sse`\n",
+    "\n",
+    "## Next Steps\n",
+    "\n",
+    "Now that we have our MCP server running, we'll create clients to interact with it. Let's move on to building our first client."
    ]
   }
  ],
