--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1303,6 +1303,44 @@
     "\n",
     "Now that we have our MCP server running, we'll create clients to interact with it. Let's move on to building our first client."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc0f1b2",
+   "metadata": {},
+   "source": [
+    "# Building MCP Clients\n",
+    "\n",
+    "In this section, we’ll create clients that can interact with our MCP server using different programming languages. We’ll implement both a JavaScript client using HuggingFace.js and a Python client using smolagents.\n",
+    "\n",
+    "**Configuring MCP Clients**\n",
+    "\n",
+    "Effective deployment of MCP servers and clients requires proper configuration. The MCP specification is still evolving, so the configuration methods are subject to evolution. We’ll focus on the current best practices for configuration.\n",
+    "\n",
+    "**MCP Configuration Files**\n",
+    "\n",
+    "MCP hosts use configuration files to manage server connections. These files define which servers are available and how to connect to them.\n",
+    "\n",
+    "The configuration files are very simple, easy to understand, and consistent across major MCP hosts.\n",
+    "\n",
+    "**mcp.json Structure**\n",
+    "\n",
+    "The standard configuration file for MCP is named mcp.json. Here’s the basic structure:\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "  \"servers\": [\n",
+    "    {\n",
+    "      \"name\": \"MCP Server\",\n",
+    "      \"transport\": {\n",
+    "        \"type\": \"sse\",\n",
+    "        \"url\": \"http://localhost:7860/gradio_api/mcp/sse\"\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
