--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1339,7 +1339,38 @@
     "    }\n",
     "  ]\n",
     "}\n",
-    "```"
+    "```\n",
+    "\n",
+    "In this example, we have a single server configured to use SSE transport, connecting to a local Gradio server running on port 7860.\n",
+    "\n",
+    "We’ve connected to the Gradio app via SSE transport because we assume that the gradio app is running on a remote server. However, if you want to connect to a local script, `stdio` transport instead of `sse` transport is a better option.\n",
+    "\n",
+    "## Configuration for HTTP+SSE Transport\n",
+    "\n",
+    "For remote servers using HTTP+SSE transport, the configuration includes the server URL:\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "  \"servers\": [\n",
+    "    {\n",
+    "      \"name\": \"Remote MCP Server\",\n",
+    "      \"transport\": {\n",
+    "        \"type\": \"sse\",\n",
+    "        \"url\": \"https://example.com/gradio_api/mcp/sse\"\n",
+    "      }\n",
+    "    }\n",
+    "  ]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This configuration allows your UI client to communicate with the Gradio MCP server using the MCP protocol, enabling seamless integration between your frontend and the MCP service.\n",
+    "\n",
+    "## Configuring a UI MCP Client\n",
+    "\n",
+    "When working with Gradio MCP servers, you can configure your UI client to connect to the server using the MCP protocol. Here's how to set it up:\n",
+    "\n",
+    "### Basic Configuration\n",
+    "\n"
    ]
   }
  ],
