--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1370,7 +1370,47 @@
     "When working with Gradio MCP servers, you can configure your UI client to connect to the server using the MCP protocol. Here's how to set it up:\n",
     "\n",
     "### Basic Configuration\n",
-    "\n"
+    "\n",
+    "Create a new file called `config.json` with the following configuration:\n",
+    "\n",
+    "```\n",
+    "{\n",
+    "  \"mcpServers\": {\n",
+    "    \"mcp\": {\n",
+    "      \"url\": \"http://localhost:7860/gradio_api/mcp/sse\"\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "### Configuring an MCP Client within Cursor IDE\n",
+    "\n",
+    "I don't need this."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80a84b5d",
+   "metadata": {},
+   "source": [
+    "# Using MCP with Local and Open Source Models\n",
+    "\n",
+    "In this section, we'll connect MCP with local and open-source models using Continue, a tool for building AI coding assistants that works with local tools like Ollama.\n",
+    "\n",
+    "## Setup Continue\n",
+    "\n",
+    "You can install Continue from the VS Code marketplace. Find it [here](https://marketplace.visualstudio.com/items?itemName=Continue.continue).\n",
+    "\n",
+    "Look [here](https://huggingface.co/learn/mcp-course/en/unit2/continue-client#local-models) for how to run local models with this.\n",
+    "\n",
+    "## Local Models\n",
+    "\n",
+    "There are many ways to run local models that are compatible with Continue. Three populat options are Ollama, Llama.cpp, and LM Studio. You already know what Ollama is, Llama.cpp is a high-performance C+= library for running LLMs that also includes an OpenAI-compatible server. LM studio you're also already familiar with.\n",
+    "\n",
+    "You can access local models from the Hugging Face Hub and get commands and quick links for all major local inference apps.\n",
+    "\n",
+    "**It is important that wee use models that have tool calling as a built-in feature**, i.e. Codestral Qwen and Llama 3.1x.\n",
+    "1. "
    ]
   }
  ],
