Getting ready to test local models

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1410,7 +1410,28 @@
     "You can access local models from the Hugging Face Hub and get commands and quick links for all major local inference apps.\n",
     "\n",
     "**It is important that wee use models that have tool calling as a built-in feature**, i.e. Codestral Qwen and Llama 3.1x.\n",
-    "1. "
+    "1. Create a folder called `.continue/models` at the top level of your workspace\n",
+    "1. Add a file to this folder to configure your model provider. For example, `local-models.yaml`.\n",
+    "1. cAdd the following configuration (this ones's for Ollama specifically)\n",
+    "\n",
+    "```\n",
+    "name: Ollama Devstral model\n",
+    "version: 0.0.1\n",
+    "schema: v1\n",
+    "models:\n",
+    "  - provider: ollama\n",
+    "    model: unsloth/devstral-small-2505-gguf:Q4_K_M\n",
+    "    defaultCompletionOptions:\n",
+    "      contextLength: 8192\n",
+    "    name: Ollama Devstral-Small\n",
+    "    roles:\n",
+    "      - chat\n",
+    "      - edit\n",
+    "```\n",
+    "\n",
+    "By default, each model has a max context length, in this case it is 128000 tokens. This setup includes a larger use of that context window to perform multiple MCP requests and needs to be able to handle more tokens.\n",
+    "\n",
+    "## How it works"
    ]
   }
  ],
