Getting ready for local model integration with MCP

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -3220,7 +3220,11 @@
     "Continue supports multiple local model providers. You can use different models for different tasks or switch models as needed. This section focuses on local-first solutions, but Continue does work with the dreaded API calls as well.\n",
     "\n",
     "## Local Model Integration with MCP\n",
-    "\n"
+    "\n",
+    "Now that we have everything set up, let's add an existing MCP server. Below is a quick example of setting up a new MCP server for use in your assistant:\n",
+    "1. Create a folder called `.continue/mcpServers` at the top level of your workspace.\n",
+    "1. Add a file called playwright-mcp.yaml to this folder\n",
+    "1. Write the following contents to playwright-mcp.yaml and save"
    ]
   }
  ],
