Some notes and updates requirements.txt

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1586,16 +1586,18 @@
     "\n",
     "Do not output code or instructions—just complete the task and confirm when it is done.\n",
     "\n",
-    "I'm not sure exactly where they want me to type this command, but I don't think this is even exactly what I'm looking for in the context of local models. I'll definitely need to do some storage cleanup after this though my goodness."
+    "I'm not sure exactly where they want me to type this command, but I don't think this is even exactly what I'm looking for in the context of local models. I'll definitely need to do some storage cleanup after this though my goodness.\n",
+    "\n",
+    "For the sake of time constraints (as much as I'd love to keep exploring here), it's time to move on."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4c4e07eb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
