Prepping for secret keys. Gotta remind myself how to do this. Been a while

--- a/mcp_notes.ipynb
+++ b/mcp_notes.ipynb
@@ -1719,12 +1719,44 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "cd5c1e52",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Next, we’ll connect to the MCP Server and get the tools that we can use to answer questions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "73561324",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/m_/f7m4q3pj7j3f6tby_sb7n5280000gn/T/ipykernel_28835/2021446007.py:1: FutureWarning: Parameter 'structured_output' was not specified. Currently it defaults to False, but in version 1.25, the default will change to True. To suppress this warning, explicitly set structured_output=True (new behavior) or structured_output=False (legacy behavior). See documentation at https://huggingface.co/docs/smolagents/tutorials/tools#structured-output-and-output-schema-support for more details.\n",
+      "  mcp_client = MCPClient(\n"
+     ]
+    }
+   ],
+   "source": [
+    "mcp_client = MCPClient(\n",
+    "    {\"url\": \"https://abidlabs-mcp-tool-http.hf.space/gradio_api/mcp/sse\", \"transport\": \"sse\",} # This is the MCP Client we created in the previous section\n",
+    ")\n",
+    "tools = mcp_client.get_tools()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6cfd2cf",
+   "metadata": {},
+   "source": [
+    "Now that we have the tools, we can create a simple agent that uses them to answer questions. We’ll just use a simple `InferenceClientModel` and the default model from `smolagents` for now.\n",
+    "\n",
+    "It is important to pass your api_key to the `InferenceClientModel`. You can access the token from your huggingface account. [check here](https://huggingface.co/docs/hub/en/security-tokens)., and set the access token with the environment variable HF_TOKEN."
+   ]
   }
  ],
  "metadata": {
